# LLM-Evaluation-MLFlow

./: README.md  pyproject.toml
app/: pdf.py  rag_poc.py  rag_system.py
mlruns/0/: meta.yaml
mlruns/0/42e74ec7f3714ca8b79d963764492e8c/: meta.yaml
mlruns/0/42e74ec7f3714ca8b79d963764492e8c/metrics/: response_length
mlruns/0/42e74ec7f3714ca8b79d963764492e8c/params/: openai_endpoint  prompt
mlruns/0/42e74ec7f3714ca8b79d963764492e8c/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
mlruns/0/datasets/b27f64df94a51508510ab5a88fdda3c9/: meta.yaml
mlruns/0/fad78d9840774e8e8bee9a8df22ac21a/: meta.yaml
mlruns/0/fad78d9840774e8e8bee9a8df22ac21a/artifacts/: eval_results_table.json
mlruns/0/fad78d9840774e8e8bee9a8df22ac21a/metrics/faithfulness/v1/: mean  p90  variance
mlruns/0/fad78d9840774e8e8bee9a8df22ac21a/metrics/latency/: mean  p90  variance
mlruns/0/fad78d9840774e8e8bee9a8df22ac21a/metrics/relevance/v1/: mean  p90  variance
mlruns/0/fad78d9840774e8e8bee9a8df22ac21a/tags/: mlflow.runName  mlflow.source.name
setup/: requirements.txt  setup.sh
tests/: endpoint_test.py  endpoints_test2.py
