[tool.poetry]
name = "ML-FLOW-Evaluation"
version = "0.1.0"
description = "LLM Evaluation Techniques"
readme = "README.md"
authors = ["Zaheeda Chauke"]
license = "MLFLOW"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pandas = "^1.5.0"  # Check compatibility with Python and other libraries
langchain= "^0.1.16"
langchain-community="0.0.33"
langchain-openai="^0.0.8"
openai="^1.12.0"
mlflow="^2.12.1"
chromadb="^0.4.24"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"  # Optional: For running tests
black = "^23.0.0"  # Optional: For code formatting

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.core.masonry.api"

